# liu_yucheng.vr_setup_android

./: .gitignore  CMakeLists.txt  README.md  build.gradle  settings.gradle
app/: .gitignore  AndroidManifest.xml  CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/vr_setup/: logger.cpp  main.cpp
app/src/main/java/com/LiuYucheng/VRSetupAndroid/: MainActivity.java
app/vr_setup_android_cpp/: CMakeLists.txt  openxr_program.cpp
app/vr_setup_android_java/liu_yucheng/vr_setup_android_java/: MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
